@@ -1,6 +1,15 @@
+2005-03-19  Quentin Mathe <qmathe@club-internet.fr>
+    
+    * AppController.m (-scanOutput:): Finished fixing code to parse correctly 
+    ukrun output (really this time :-).
+    (-[NSScanner checkStrings:stopForNewLine:]): Added to allow tests with a
+    strings list parameter.
+    (-[NSScanner checkString:stopForNewLine:]): Updated to have possibility to
+    check only the current line.
+
 2005-03-18  Quentin Mathe <qmathe@club-internet.fr>
     
-    * AppController.m (-scanOutput:): Fixed code to parses correctly ukrun
+    * AppController.m (-scanOutput:): Fixed code to parse correctly ukrun
     output (minor tweaks still needed).
     (-[NSScanner checkString:]): Added a NSScanner category to eliminate real 
     scanner limitations.
